# displayinfo-aml-soc

./: CMakeLists.txt
